# sindri

./: .gitignore  AGENT_GUIDE.md  ARCHITECTURE.md  BROKKR_IMPROVEMENTS.md  CLAUDE.md  COMPLEX_DELEGATION_TEST_RESULTS.md  CONTRIBUTING.md  DELEGATION_PARSING_BUG_FIX.md  DOCUMENTATION_INDEX.md  ENHANCEMENTS.md  FIXES.md  HANDOFF_2026-01-14.md  LICENSE  MEMORY_SYSTEM_TEST_RESULTS.md  NAVIGATION.md  ONBOARDING.md  OPERATIONS.md  PHASE1_STATUS.md  PHASE2_STATUS.md  PHASE4_COMPLETE.md  QUICKSTART.md  QUICK_START_NEXT_SESSION.md  README.md  ROADMAP.md  SESSION_2026-01-14_SUMMARY.md  SESSION_RESUME_FIX.md  START_HERE.md  STATUS.md  TESTING_RESULTS.md  TOOLS_AND_MODELS_ANALYSIS.md  TUI_CANCELLATION_FEATURE.md  TUI_DEMO.md  TUI_ERROR_DISPLAY_IMPROVEMENTS.md  TUI_ERROR_DISPLAY_TEST_RESULTS.md  pyproject.toml  test_brokkr_improvements.py  test_cancellation.py  test_complex_delegation.py  test_error_display.py  test_error_display_real.py  (+9 more)
.claude/: settings.local.json
docs/: AGENTS.md  API.md  CONFIGURATION.md  QUICKSTART.md  TROUBLESHOOTING.md  WORK_DIR_GUIDE.md
prompts/: PHASE1.md
sindri/: __init__.py  __main__.py  cli.py  config.py  logging.py
tests/: conftest.py  test_activity.py  test_agent_specialization.py  test_api_keys.py  test_api_spec.py  test_ast_refactoring.py  test_audit.py  test_batch_rename.py  test_cicd.py  test_cli_commands.py  test_codebase_understanding.py  test_collaboration.py  test_coverage.py  test_database_backup.py  test_delegation.py  test_dependency_scanner.py  test_diagrams.py  test_directory_tools.py  test_docker.py  test_doctor.py  test_export.py  (+47 more)
(+172 files in other folders)
