[project]
name = "sindri"
version = "0.1.0"
description = "Local LLM orchestration - forge code with Ollama"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.0.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.0.0",
    "sqlite-vec>=0.1.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
tui = ["textual>=0.89.0"]

[project.scripts]
sindri = "sindri.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
